Improve FAQ readability. Fixes https://github.com/0xProject/website/issues/62

--- a/less/markdown.less
+++ b/less/markdown.less
@@ -4,10 +4,9 @@
     }
 
     p {
-        font-weight: 100;
         line-height: 1.4;
         font-size: 16px;
-        color: black;
+        color: 'rgb(66, 66, 66)';
     }
 
     a {
